--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=ADS131M0x
 version=1.0.0
-author=Juergen Goldmann
+author= Lucas Etchezuri <lucas.etchezuri@gmail.com>, Juergen Goldmann <raibisch@gmail.com>
 maintainer=Juergen Goldmann <raibisch@gmail.com>
 sentence=Arduino library for ADS131M02 and ADA131M04 (SPI-Bus)
 paragraph=Arduino library for ADS131M02 and ADA131M04 (SPI-Bus)
